--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             Podaj imię:<input type="text" placeholder="wpisz swoje imię">
             <fieldset>
                 <legend>Usługa</legend>
-            Mycie zewnętrzne 30zł<input type="checkbox" value="checked">
-            Suszenie 10zł<input type="checkbox">
-            Woskowanie 15zł<input type="checkbox">
-            Odkurzanie 10zł<input type="checkbox">
+            <a>Mycie zewnętrzne 30zł<input type="checkbox" value="checked"></a>
+            <a>Suszenie 10zł<input type="checkbox"></a>
+            <a>Woskowanie 15zł<input type="checkbox"></a>
+            <a>Odkurzanie 10zł<input type="checkbox"></a>
             </fieldset>
             <fieldset>
             <legend>Rodzaj pojazdu</legend>
@@ -51,7 +51,7 @@
 
     <aside>
         <h2>Rezerwacja na godzinę</h2>
-        Rezerwacja na godzinę Rezerwuj termin mycia samochodu Masz mało czasu? Nie lubisz czekać? Zarezerwuj mycie pojazdu na konkretną godzinę
+        <article>Rezerwacja na godzinę Rezerwuj termin mycia samochodu Masz mało czasu? Nie lubisz czekać? Zarezerwuj mycie pojazdu na konkretną godzinę</article>
     </aside>
 <footer>Michał Szczęsny 2P</footer>
 </div>
