--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Michał Szczęsny">
     <link rel="stylesheet" href="style/main.css">
-    <title>Document</title>
+    <title>Myjnia ręczna BŁYSK</title>
 </head>
 <body>
 <div class="container">
     <div class="Menu">
-    <header><h1>Myjnia ręczna BŁYSK</h1></header>
+    <header><h1>Myjnia ręczna <div class="blysk">BŁYSK</div></h1></header>
     <ul>
-        <li>Home</li>
-        <li>Cennik</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Cennik</a></li>
     </ul>
     </div>
     <main>
         <h2>Oblicz koszt usługi</h2>
         <form>
-            Podaj imię:<input type="text" placeholder="wpisz swoje imię">
+            Podaj imię:<input type="text" placeholder="wpisz swoje imię" required>
             <fieldset>
                 <legend>Usługa</legend>
-            <a>Mycie zewnętrzne 30zł<input type="checkbox" value="checked"></a>
+            <a>Mycie zewnętrzne 30zł<input type="checkbox" checked></a>
             <a>Suszenie 10zł<input type="checkbox"></a>
             <a>Woskowanie 15zł<input type="checkbox"></a>
             <a>Odkurzanie 10zł<input type="checkbox"></a>
@@ -37,14 +38,14 @@
             </fieldset>
                 <fieldset>
                     <legend>Karta stałego klienta</legend>
-                Brak<input type="radio">
-                Srebrna (-5%)<input type="radio">
-                Złota (-15%)<input type="radio">
+                Brak<input type="radio" checked name="KSK">
+                Srebrna (-5%)<input type="radio" name="KSK">
+                Złota (-15%)<input type="radio" name="KSK">
             </fieldset>
             <input type="reset" value="Wyczyść">
             <input type="submit" value="Oblicz">
         </form>
-        <img src="hand_m.jpg">
+        <img src="hand_m.jpg" alt="mycie ręczne">
         Koszt usługi:
     </main>
 
@@ -53,7 +54,7 @@
         <h2>Rezerwacja na godzinę</h2>
         <article>Rezerwacja na godzinę Rezerwuj termin mycia samochodu Masz mało czasu? Nie lubisz czekać? Zarezerwuj mycie pojazdu na konkretną godzinę</article>
     </aside>
-<footer>Michał Szczęsny 2P</footer>
+<footer><div class="Imie">Michał Szczęsny</div>2P</footer>
 </div>
 </body>
 </html>
