--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <h2>Oblicz koszt usługi</h2>
         <form>
-            Podaj imię:<input type="text" placeholder="wpisz swoje imię" required>
+            <label class="im">Podaj imię:<input type="text" placeholder="wpisz swoje imię" required></label>
             <fieldset class="usluga">
                 <legend>Usługa</legend>
             <a>Mycie zewnętrzne 30zł<input type="checkbox" checked></a>
