Poprawki w css i html

--- a/cennik.html
+++ b/cennik.html
@@ -12,8 +12,8 @@
     <nav>
     <header><h1>Myjnia ręczna <div class="blysk">BŁYSK</div></h1></header>
     <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="cennik.html">Cennik</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="cennik.html" class="active">Cennik</a></li>
     </ul>
     </nav>
     <main>
